--- a/css/style.css
+++ b/css/style.css
@@ -13,38 +13,77 @@ h1 {
    text-indent: 15px;
    text-shadow: rgb(173, 170, 170);
 }
+
+h2 {
+   font-size: 1em;
+   text-align: center;
+   background-color: rgb(226, 139, 26);
+   float: left;
+   padding: 12px;
+   width: fit-content;
+   margin: auto;
+   margin-top: 50px;
+   color: rgb(248, 248, 246);
+   border-radius: 10px;
+   text-indent: 15px;
+   text-shadow: rgb(173, 170, 170);
+}
+
 footer {
   text-align: center;
   color: rgb(201, 184, 233);
  
 }
 p {
-  text-align: justify;
+  text-align: center;
   background: rgb(148, 93, 16);
-  padding: 12px;
+  padding: .5%;
   width: 65%;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 10%;
   color: rgb(241, 241, 237);
   border-radius: 5px;
 }
 
 aside {
+  font-size: small;
   float: left;
-  text-align: center;
+  text-align: left;
   background: rgb(148, 93, 16);
-  padding: 12px;
-  width: fit-content;
-  margin: auto;
-  margin-top: 30px;
+  padding: .5%;
+  margin: 5px 5px 5px 5px;
   color: rgb(241, 241, 237);
   border-radius: 10px;
 }
 
-  
+.aside2 {
+  font-size: small;
+  float: right;
+  text-align: center;
+  background: rgb(148, 93, 16);
+  padding: 12px;
+  width: fit-content;
+  margin: 5px;
+  color: rgb(241, 241, 237);
+  border-radius: 10px;
+}
 
- body {
-    background: rgb(90, 87, 141);
-    background: linear-gradient(90deg, rgb(54, 51, 126) 0%, 
-      rgb(73, 73, 172) 35%, rgb(0, 174, 255) 100%);
-  }
+
+body {
+  background: rgb(90, 87, 141);
+  Background: linear-gradient(90deg, rgb(54, 51, 126) 0%, 
+    rgb(73, 73, 172) 35%, rgb(0, 174, 255) 100%);
+}
+
+article {
+  text-align: center;
+
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ul {
+  list-style-type: inside circle;
+}
